@@ -2,6 +2,8 @@ Revision history for Parse-ANSIColor-Tiny
 
 {{$NEXT}}
 
+  - Limit exports to @EXPORT_OK rather than any sub
+
 0.302     2011-11-14T18:34:58Z
 
   - Initial release
